# tsSorter

./: .gitignore  LICENSE.txt  README.md  run.sh  stack.yaml  tsSorter.cabal
app/: Main.hs
res/: DoTests.hs  package.json  test.01.ts  test.02.ts  test.03.ts  test.04.ts  test.05.ts  test.06.ts  test.07.ts  test.08.ts  test.09.ts  test.10.ts  tslint.json
src/: Lib.hs
test/: Spec.hs
