name:                tsSorter
version:             0.1.0.0
synopsis:            Sorts TypeScript imports.
description:         Please see README.md
homepage:            https://github.com/mnn/tsSorter
license:             GPL-3
license-file:        LICENSE.txt
maintainer:          mkucera22@gmail.com
copyright:           2017 Favorlogic
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , parsec == 3.*
                     , ghc-mod == 5.*
                     , lens == 4.*
                     , regex-compat == 0.*
                     , MissingH == 1.4.*
  default-language:    Haskell2010

executable ts-sorter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tsSorter
                     , Hclip == 3.*
  default-language:    Haskell2010

test-suite ts-sorter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tsSorter
                     , HUnit
                     , HTF == 0.13.*
                     , parsec == 3.*
                     , lens == 4.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mnn/tsSorter
